tests/invalid/import_from_inside_while/main.py
def main() -> None:
    while False:
        from imports import module_a
